--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "build": "tsc",
         "prepare": "npm run build",
-        "pack": "webpack --mode production",
+        "pack": "webpack --mode production && tsc src/build.ts --outDir dist && node dist/build.js",
         "dev": "webpack serve --mode development --open"
     },
     "keywords": [],
@@ -27,6 +27,8 @@
         "webpack-dev-server": "^5.2.0"
     },
     "dependencies": {
+        "buffer": "^6.0.3",
+        "esbuild": "^0.25.0",
         "sax": "^1.4.1",
         "saxes": "^6.0.0"
     }
