--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "license": "MIT",
     "devDependencies": {
         "@types/sax": "^1.2.7",
-        "css-loader": "^6.10.0",
+        "css-loader": "^6.11.0",
         "css-minimizer-webpack-plugin": "^6.0.0",
         "html-webpack-plugin": "^5.6.3",
-        "mini-css-extract-plugin": "^2.8.0",
+        "mini-css-extract-plugin": "^2.9.2",
+        "style-loader": "^4.0.0",
         "terser-webpack-plugin": "^5.3.11",
         "ts-loader": "^9.5.1",
         "typescript": "^5.3.3",
