some footer works

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "scripts": {
         "build": "tsc",
         "prepare": "npm run build",
-        "pack": "webpack --mode production && webpack --config webpack.css.config.js && tsc src/build.ts --outDir dist && node dist/build.js",
-        "dev": "webpack serve --mode development --open"
+        "pack": "NODE_ENV=production webpack && tsc src/build.ts --outDir dist && node dist/build.js",
+        "dev": "webpack serve --mode development --hot"
     },
     "keywords": [],
     "author": "",
